# telemetry-rust-tutorial

./: .gitignore  Dockerfile  docker-compose.yaml  readme.md
otel_connector/: collet-config.yaml  go.mod  go.sum  main.go
otel_connector/exporter/elasticsearchexporter/: config.go  config_test.go  elasticsearch_bulk.go  factory.go  model.go  trace_exporter.go
otel_connector/exporter/elasticsearchexporter/internal/metadata/: generated_status.go
otel_connector/exporter/jaegerexporter/: config.go  exporter.go  factory.go
otel_connector/exporter/jaegerexporter/internal/metadata/: generated_status.go
otel_connector/extension/bearertokenauthextension/: bearertokenauth.go  config.go  factory.go
otel_connector/extension/bearertokenauthextension/internal/metadata/: generated_status.go
otel_connector/pkg/translator/jaeger/: jaegerproto_to_traces.go  jaegerproto_to_traces_test.go  jaegerthrift_to_traces.go  jaegerthrift_to_traces_test.go  traces_to_jaegerproto.go
otel_connector/receiver/otlpreceiver/: factory.go  otlp.go  otlphttp.go
otel_connector/receiver/otlpreceiver/internal/logs/: otlp.go
otel_connector/receiver/otlpreceiver/internal/metrics/: otlp.go
rust_telemetry_tutorial/: Cargo.toml
rust_telemetry_tutorial/example/: Cargo.toml  build.rs
rust_telemetry_tutorial/example/proto/: msg.proto
rust_telemetry_tutorial/example/src/: main.rs  msg.rs  third_part.rs
rust_telemetry_tutorial/trace_msg/: Cargo.toml
rust_telemetry_tutorial/trace_msg/src/: custom_span.rs  custom_tracer.rs  lib.rs  macros.rs
(+1 files in other folders)
