[workspace]
members = ["trace_msg", "example"]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
tonic = { version = "0.11.0", features = ["gzip"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
opentelemetry_sdk = { version = "0.22.0", features = ["rt-tokio"] }
tracing-opentelemetry = "0.23.0"
opentelemetry-otlp = "0.15.0"
opentelemetry = { version = "0.22.0", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
